--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,20 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
-org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
 minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.14.24
-geckolib_version=4.2.4
-mod_menu_version=7.2.2
+minecraft_version_range=[1.20.1,1.21)
+forge_version=47.2.19
+forge_version_range=[47,)
+loader_version_range=[47,)
 
-# Mod Properties
-mod_version=1.0.2-fabric
-maven_group=com.starfish_studios
-archives_base_name=hamsters
+mapping_channel=official
 
-# Dependencies
-fabric_version=0.90.4+1.20.1
+mapping_version=1.20.1
+
+mod_id=hamsters
+mod_name=Hamsters
+mod_license=MIT
+mod_version=1.0.2
+mod_group_id=com.starfish_studios
+mod_authors=Starfish Studios, Ninni, crispytwig
+mod_description=Introducing small, fluffy, and adorable hamsters to Minecraft!
