--- a/build.gradle
+++ b/build.gradle
@@ -1,92 +1,200 @@
+buildscript {
+	repositories {
+		// These repositories are only for Gradle plugins, put any other repositories in the repository block further below
+		maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
+
+		mavenCentral()
+	}
+	dependencies {
+		classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+	}
+}
+
 plugins {
-	id 'fabric-loom' version '1.2-SNAPSHOT'
-	id 'maven-publish'
+	id 'eclipse'
+	id 'idea'
+	id 'net.minecraftforge.gradle' version '[6.0,6.2)'
 }
 
-version = project.mod_version
-group = project.maven_group
+apply plugin: 'org.spongepowered.mixin'
 
-repositories {
-	maven {
-		url "https://maven.terraformersmc.com/"
-	}
-	maven {
-		name = 'GeckoLib'
-		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
-	}
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
-}
-
-loom {
-}
-
-
-dependencies {
-	// To change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings loom.officialMojangMappings()
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-	modImplementation ("software.bernie.geckolib:geckolib-fabric-1.20.1:${project.geckolib_version}")
-	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	// Uncomment the following line to enable the deprecated Fabric API modules.
-	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
-	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
-}
+group = mod_group_id
+version = "${minecraft_version}-${mod_version}"
 
 base {
-	archivesName = project.archives_base_name
-}
-
-processResources {
-	inputs.property "version", project.version
-
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
-	}
-}
-
-tasks.withType(JavaCompile).configureEach {
-	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-	it.options.release = 17
+	archivesName = mod_id
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
-	withSourcesJar()
-
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
-jar {
-	from("LICENSE") {
-		rename { "${it}_${base.archivesName.get()}"}
-	}
-}
+minecraft {
+	// The mappings can be changed at any time and must be in the following format.
+	// Channel:   Version:
+	// official   MCVersion             Official field/method names from Mojang mapping files
+	// parchment  YYYY.MM.DD-MCVersion  Open community-sourced parameter names and javadocs layered on top of official
+	//
+	// You must be aware of the Mojang license when using the 'official' or 'parchment' mappings.
+	// See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
+	//
+	// Parchment is an unofficial project maintained by ParchmentMC, separate from MinecraftForge
+	// Additional setup is needed to use their mappings: https://parchmentmc.org/docs/getting-started
+	//
+	// Use non-default mappings at your own risk. They may not always work.
+	// Simply re-run your setup task after changing the mappings to update your workspace.
+	mappings channel: mapping_channel, version: mapping_version
 
-// configure the maven publication
-publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			from components.java
+	// When true, this property will have all Eclipse/IntelliJ IDEA run configurations run the "prepareX" task for the given run configuration before launching the game.
+	// enableEclipsePrepareRuns = true
+	// enableIdeaPrepareRuns = true
+
+	// This property allows configuring Gradle's ProcessResources task(s) to run on IDE output locations before launching the game.
+	// It is REQUIRED to be set to true for this template to function.
+	// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
+	copyIdeResources = true
+
+	// When true, this property will add the folder name of all declared run configurations to generated IDE run configurations.
+	// The folder name can be set on a run configuration using the "folderName" property.
+	// By default, the folder name of a run configuration is the name of the Gradle project containing it.
+	// generateRunFolders = true
+
+	// This property enables access transformers for use in development.
+	// They will be applied to the Minecraft artifact.
+	// The access transformer file can be anywhere in the project.
+	// However, it must be at "META-INF/accesstransformer.cfg" in the final mod jar to be loaded by Forge.
+	// This default location is a best practice to automatically put the file in the right place in the final jar.
+	// See https://docs.minecraftforge.net/en/latest/advanced/accesstransformers/ for more information.
+	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
+	// Default run configurations.
+	// These can be tweaked, removed, or duplicated as needed.
+	runs {
+		// applies to all the run configs below
+		configureEach {
+			workingDirectory project.file('run')
+
+			// Recommended logging data for a userdev environment
+			// The markers can be added/remove as needed separated by commas.
+			// "SCAN": For mods scan.
+			// "REGISTRIES": For firing of registry events.
+			// "REGISTRYDUMP": For getting the contents of all registries.
+			property 'forge.logging.markers', 'REGISTRIES'
+
+
+			// Recommended logging level for the console
+			// You can set various levels here.
+			// Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
+			property 'forge.logging.console.level', 'debug'
+
+			mods {
+				"${mod_id}" {
+					source sourceSets.main
+				}
+			}
+		}
+
+		client {
+			// Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
+			property 'forge.enabledGameTestNamespaces', mod_id
+		}
+
+		server {
+			property 'forge.enabledGameTestNamespaces', mod_id
+			args '--nogui'
+		}
+
+		// This run config launches GameTestServer and runs all registered gametests, then exits.
+		// By default, the server will crash when no gametests are provided.
+		// The gametest system is also enabled by default for other run configs under the /test command.
+		gameTestServer {
+			property 'forge.enabledGameTestNamespaces', mod_id
+		}
+
+		data {
+			// example of overriding the workingDirectory set in configureEach above
+			workingDirectory project.file('run-data')
+
+			// Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
+			args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 		}
 	}
+}
 
-	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
+mixin {
+	add sourceSets.main, "${mod_id}.refmap.json"
+
+	config "${mod_id}.mixins.json"
+}
+
+// Include resources generated by data generators.
+sourceSets.main.resources { srcDir 'src/generated/resources' }
+
+repositories {
+	maven {
+		name = 'GeckoLib'
+		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
+		content {
+			includeGroupByRegex("software\\.bernie.*")
+			includeGroup("com.eliotlash.mclib")
+		}
 	}
+}
+
+dependencies {
+	minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+
+	implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.19:3.1.40')
+
+	// Example mod dependency using a mod jar from ./libs with a flat dir repository
+	// This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
+	// The group id is ignored when searching -- in this case, it is "blank"
+	// implementation fg.deobf("blank:coolmod-${mc_version}:${coolmod_version}")
+
+	// For more info:
+	// http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
+	// http://www.gradle.org/docs/current/userguide/dependency_management.html
+
+	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+}
+
+// This block of code expands all declared replace properties in the specified resource targets.
+// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
+// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
+// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
+tasks.named('processResources', ProcessResources).configure {
+	var replaceProperties = [
+			minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
+			forge_version: forge_version, forge_version_range: forge_version_range,
+			loader_version_range: loader_version_range,
+			mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
+			mod_authors: mod_authors, mod_description: mod_description,
+	]
+
+	inputs.properties replaceProperties
+
+	filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
+		expand replaceProperties + [project: project]
+	}}
+
+// Example for how to get properties into the manifest for reading at runtime.
+tasks.named('jar', Jar).configure {
+	manifest {
+		attributes([
+				"Specification-Title": mod_id,
+				"Specification-Vendor": mod_authors,
+				"Specification-Version": "1", // We are version 1 of ourselves
+				"Implementation-Title": project.name,
+				"Implementation-Version": project.jar.archiveVersion,
+				"Implementation-Vendor": mod_authors,
+				"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+		])
+	}
+
+	// This is the preferred method to reobfuscate your jar file
+	finalizedBy 'reobfJar'
+}
+
+tasks.withType(JavaCompile).configureEach {
+	options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
