--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ plugins {
 apply plugin: 'org.spongepowered.mixin'
 
 group = mod_group_id
-version = "${minecraft_version}-${mod_version}"
+version = "${modloader}-${mod_version}-${minecraft_version}"
 
 base {
 	archivesName = mod_id
