--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ mapping_version=1.20.1
 mod_id=hamsters
 mod_name=Hamsters
 mod_license=MIT
+modloader=forge
 mod_version=1.0.3
 mod_group_id=com.starfish_studios
 mod_authors=Starfish Studios, Ninni, crispytwig
