--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ geckolib_version=4.2.4
 mod_menu_version=7.2.2
 
 # Mod Properties
-mod_version=1.0.2-fabric
+mod_version=fabric-1.0.3-1.20.1
 maven_group=com.starfish_studios
 archives_base_name=hamsters
 
