--- a/gradle.properties
+++ b/gradle.properties
@@ -7,13 +7,17 @@ org.gradle.parallel=true
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
 loader_version=0.14.24
-geckolib_version=4.2.4
+geckolib_version=4.4.4
 mod_menu_version=7.2.2
 
 # Mod Properties
-mod_version=fabric-1.0.3-1.20.1
+mod_version=fabric-1.1.0-1.20.1
 maven_group=com.starfish_studios
 archives_base_name=hamsters
+
+fabric_registrate_version = 1.3.62-MC1.20.1
+fabric_flywheel_version = 0.6.9-1
+fabric_create_version = 0.5.1-d-build.1161+mc1.20.1
 
 # Dependencies
 fabric_version=0.90.4+1.20.1
